Fix dropdown being hidden by panel overflow

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -80,3 +80,7 @@ textarea {
   color: rgb(231, 231, 231);
   font-size: larger;
 }
+
+#accordion > .panel {
+  overflow: visible;
+}
